fixed alignment

--- a/src/components/dresscode.css
+++ b/src/components/dresscode.css
@@ -55,7 +55,7 @@
 
 .dc-text-content{
   width: 25vw;
-  height: 100%;
+  height: 10vh;
   text-align: center;
 }
 
